<resources>
    <string name="app_name">SPCourseWork</string>

    <!-- Navigation Item start -->
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="filter_and_search">Filter and search</string>
    <string name="sort_by_date_edited">Sort by date edited</string>
    <string name="successfully_deleted_habit">Successfully deleted habit</string>
    <string name="undo">Undo</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="client_name">Client Name</string>
    <string name="client_s_car_number">Client\'s car number</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="employee_name">Employee name</string>
    <string name="employee_s_phone_number">Employee\'s phone number</string>
    <string name="employee_s_password">Employee\'s password</string>
    <string name="admin">Admin</string>
    <string name="worker">Worker</string>
    <string name="create_request">Create request</string>
    <string name="create_employee">Create employee</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="wrong_phone">Wrong Phone</string>
    <string name="pending">Pending</string>
    <string name="working">Working</string>
    <string name="finished">Finished</string>
    <string name="logout">Logout</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="too_long">Too long</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="at_least_1_digit">At least 1 digit</string>
    <string name="at_least_1_capital_and_lowercase">At least 1 capital and lowercase</string>
    <string name="client_s_phone_number">Client\'s phone number</string>
    <string name="wrong_format_a123aa12">Wrong format: A123AA12</string>
    <string name="find_client_with_car_number">find client with car number</string>
    <string name="can_t_find_client_with_entered_car_s_number">Can\'t find client with entered Car\'s number</string>
    <string name="client_found">Client found</string>
    <string name="requestNumber">Request #%1$d</string>
    <string name="carNumber">Car Number:  %1$s</string>
    <string name="currentStatus">Current status: %1$s</string>
    <string name="clientsPhone">Client\'s phone number: %1$s</string>
    <string name="add_commentary_about_request">Add commentary about request</string>
    <string name="take_request">Take Request</string>
    <string name="finish_request">Finish Request</string>
    <string name="return_request">Return Request</string>
    <string name="request_successfully_taken">Request successfully taken</string>
    <!-- Navigation Item end -->
</resources>