<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/holderFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/createRequestFragment"
            android:icon="@drawable/ic_request"
            android:title="@string/create_request" />

        <item
            android:id="@+id/createEmployeeFragment"
            android:icon="@drawable/ic_employee"
            android:title="@string/create_employee" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>