<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmployeeName"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmployeeName"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/employee_name"
            android:lines="1"
            android:maxLines="1"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmployeePhoneNumber"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmployeePhoneNumber"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/employee_s_phone_number"
            android:inputType="phone"
            android:lines="1"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerEmployeePassword"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmployeePassword"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/employee_s_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgEmployeeRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbWorker"
            style="@style/CasualTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/worker" />

        <RadioButton
            android:id="@+id/rbAdmin"
            style="@style/CasualTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:text="@string/admin" />

    </RadioGroup>


    <Button
        android:id="@+id/btnSubmit"
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="48dp"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>
