<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerClientName"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etClientName"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/client_name"
            android:lines="1"
            android:maxLines="1"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerCarNumber"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:helperText=""
        app:helperTextTextColor="@android:color/holo_red_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCarNumber"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/client_s_car_number"
            android:lines="1"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerDescription"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            style="@style/CasualTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description"
            android:lines="3"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/CasualTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="48dp"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>